@@ -25,6 +25,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
+import static com.fasterxml.jackson.core.StreamReadConstraints.DEFAULT_MAX_STRING_LEN;
 import static io.airlift.json.JsonCodec.jsonCodec;
 import static io.airlift.json.JsonCodec.listJsonCodec;
 import static io.airlift.json.JsonCodec.mapJsonCodec;
@@ -232,6 +233,19 @@ public class TestJsonCodec
         assertFalse(jsonCodec.toJsonWithLengthLimit(person, 1000).isPresent());
         assertFalse(jsonCodec.toJsonWithLengthLimit(person, 1035).isPresent());
         assertTrue(jsonCodec.toJsonWithLengthLimit(person, 1036).isPresent());
+    }
+
+    @Test
+    public void testToJsonExceedingDefaultStringLimit()
+    {
+        JsonCodec<ImmutablePerson> jsonCodec = jsonCodec(ImmutablePerson.class);
+        ImmutablePerson person = new ImmutablePerson(Strings.repeat("a", DEFAULT_MAX_STRING_LEN + 1), false);
+
+        String json = jsonCodec.toJson(person);
+        assertEquals(jsonCodec.fromJson(json), person);
+
+        byte[] bytes = jsonCodec.toJsonBytes(person);
+        assertEquals(jsonCodec.fromJson(bytes), person);
     }
 
     @Test
